--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #f5f0ff; /* Faint purple background color */
 }
 
 .card {
